WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85781
Buildfix for buggy GCC
https://bugs.webkit.org/show_bug.cgi?id=85781
Summary
Buildfix for buggy GCC
Csaba Osztrogonác
Reported
2012-05-07 01:39:26 PDT
After
http://trac.webkit.org/changeset/116009
build started to fail on Qt Windows and on Qt ARM bots: In file included from ../../../../Source/WebCore/rendering/RenderBlock.cpp:25:0: ../../../../Source/WebCore/rendering/RenderBlock.h: In function 'void WebCore::RenderBlock::MarginInfo::_ZN7WebCore11RenderBlock10MarginInfo11clearMarginEv.clone.244(WebCore::LayoutUnit*, int*)': ../../../../Source/WebCore/rendering/RenderBlock.h:868:69: internal compiler error: in create_tmp_var, at gimplify.c:505 This change is absolutely innocent and it didn't change anything in this file. Unfortunately it is a crazy GCC bug triggered by this patch.
Attachments
Patch
(1.48 KB, patch)
2012-05-07 01:42 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(1.48 KB, patch)
2012-05-07 03:24 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-05-07 01:42:58 PDT
Created
attachment 140494
[details]
Patch
Csaba Osztrogonác
Comment 2
2012-05-07 03:24:25 PDT
Created
attachment 140501
[details]
Patch
WebKit Review Bot
Comment 3
2012-05-07 04:42:24 PDT
Comment on
attachment 140501
[details]
Patch Clearing flags on attachment: 140501 Committed
r116298
: <
http://trac.webkit.org/changeset/116298
>
WebKit Review Bot
Comment 4
2012-05-07 04:42:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug