Buildfix for buggy GCC https://bugs.webkit.org/show_bug.cgi?id=85781

Reviewed by Zoltan Herczeg.

* rendering/RenderBlock.h:
(WebCore::RenderBlock::MarginInfo::clearMargin):


Canonical link: https://commits.webkit.org/103361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116298 268f45cc-cd09-0410-ab3c-d52691b4dbfc